@@ -1,3 +1,7 @@
+2006-11-13  Jason Rumney  <jasonr@gnu.org>
+	* emacsclient.c [WINDOWSNT]: Let config.h define HAVE_SOCKETS and
+	HAVE_INET_SOCKETS.
+
 2006-11-13  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (emacsclient): Depend also on emacsclientw.exe.
